# Aaroh

./: .env.example  .gitignore  Dockerfile.agent  NEAR_SMART_CONTRACT_GUIDE.md  README.md  STATUS.md  agent.py  claude_desktop_config.json  docker-compose.yml  mcp_client.py  onboard_merchant.py  pyproject.toml  sample.csv
chat/: .env.example  .gitignore  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
chat/app/: globals.css  layout.tsx
chat/components/: app-sidebar.tsx  greeting.tsx  message.tsx  near-sign-in-button.tsx  privy-provider.tsx  storage-settings.tsx  top-nav.tsx
chat/hooks/: use-agent-balance.ts  use-agent-master-key.ts  use-near-cart-sync.ts  use-task-sse.ts
chat/lib/: merchant-processes.ts
consumer/: .env.example  README.md  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml
consumer/app/: layout.tsx  page.tsx
consumer/components/: app-sidebar.tsx  chat.tsx  landing-page.tsx  message-editor.tsx  message.tsx  messages.tsx  multimodal-input.tsx  suggested-actions.tsx  top-nav.tsx
consumer/hooks/: use-agent-balance.ts  use-task-sse.ts  (+3 more)
contracts/ai-memory/: .gitignore  Cargo.toml  README.md  build.sh  deploy.sh  test.sh
contracts/ai-memory/src/: lib.rs
demo_data/: catalogue.csv
landing/: .env.example  package.json  pnpm-lock.yaml
merchant/: .dockerignore  .env.example  Dockerfile  README.md  drizzle.config.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml
shopping/: __init__.py  agent_loop.py  evm.py  identity.py  ipfs.py  keys.py  merchant_discovery.py  retry_utils.py  session.py  tools.py
(+182 files in other folders)
