[project]
name = "agentic-commerce"
version = "0.1.0"
description = "Merchant onboarding and MCP shopping client for UCP agentic commerce"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "UCP Team" }]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.26.0",
    "openpyxl>=3.1.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "google-genai>=1.0.0",
    "eth-account>=0.13.0",
    "web3>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
